# vip_project

./: README.md
docs/: 01_project_overview.ipynb  README.md
other_files/Modified_files/: camera_pub.py  robot.py
other_files/Web_interface/: receiver.py  sender.py  working
other_files/data_entry/: database_enctry(case2).py  datbase_entry(case1).py
other_files/generate_apriltags/src/april/tag/: Generate36h11.java  steps_to_complie_and_output
other_files/subprocess/: detect_apriltag.py
other_files/taipy_modules/: button.py  display_picture.py  interface_development1.py  interface_development2.py  menu.py  metric.py  tabular_data.py
src/inventory/: package.xml  read_me.md  setup.cfg  setup.py
src/inventory/config/: setup.py  wafflepi_parms.yaml
src/inventory/inventory/: c_navigate_to_pose.py  capture.py
src/inventory/launch/: cartographer_mapping.launch.py  manual_navigation.launch.py  slamtoolbox_mapping.launch.py  view_map.launch.py
src/inventory/rviz2/: view_map.rviz
src/inventory/subprocess/: detect_apriltag.py
src/irobot/: package.xml  setup.cfg  setup.py
src/irobot/config/: cartographer1.lua  wafflepi_parms.yaml
src/irobot/irobot/: Inventory_scan.py  capture.py  navigate_to_points.py
src/irobot/launch/: cartographer_mapping.launch.py  slam_navigation.launch.py
src/irobot/maps/: dubai_house_basic.pgm  dubai_house_basic.yaml  warehouse_map.pgm  warehouse_map.yaml
