<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inventory</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Faheem1243@gmail.com">faheem</maintainer>
  <license>TODO: License declaration</license>

   <!-- Dependencies -->
   <depend>rclpy</depend>
   <depend>nav2_bringup</depend>
   <depend>slam_toolbox</depend>
   <depend>turtlebot3_navigation2</depend>
   <depend>turtlebot3_bringup</depend>
   <depend>robot_state_publisher</depend>
   <depend>tf2_ros</depend>
   <depend>sensor_msgs</depend>
  
    <!-- Testing dependencies -->
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
 
     <!-- Testing dependencies -->
   <build_depend>custom_files</build_depend>
   <exec_depend>custom_files</exec_depend>
 
   
 
   <export>
     <build_type>ament_python</build_type>
   </export>
 </package>
